--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.4"
-  }
+    "socket.io": "^4.5.4",
+    "sqlite3": "^5.1.4"
+  },
+  "type": "module"
 }
