--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "french-ear-training-game-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
