--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "french-ear-training-game-server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
